Some fix and task